# AC215_the-daily-drip

./: .gitignore  ANSWERS_TO_YOUR_QUESTIONS.md  APPLICATION_DESIGN.md  BLOG_POST.md  COMMIT_TO_NEW_BRANCH.md  COVERAGE_GAPS.md  DATA_VERSIONING.md  Dockerfile.agent  Dockerfile.monolith  GIT_PUSH_GUIDE.md  INTEGRATION_USAGE.md  Makefile  QUICK_START.md  README.md  SAFE_GIT_COMMANDS.sh  agent.py  application_design (3).md  application_design.md  bean_request.json  demo_bean.json  docker-compose.yml  integrated_agent.py  package-lock.json  package.json  save_visualization.py  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
CI-tests/: .flake8  CI_SETUP_SUMMARY.md  QUICK_START_CI.md  setup-tests.sh
agent_core/: __init__.py  agent.py  agent_requirements.txt  integrated_agent.py  pytest.ini  requirements-dev.txt  visualization_agent_v2.py
dailydrip_rag/: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
dailydrip_rag/data/processed/: chunks.jsonl  records.jsonl
dailydrip_rag/data/raw/: coffee_brew_logs_sample.jsonl  ucdavis_sample.csv
dailydrip_rag/indexes/chroma/: chroma.sqlite3
dailydrip_rag/scripts/: build_index.sh  ingest.sh  query.sh
dailydrip_rag/src/: chunk.py  index.py  ingest.py  query.py  service.py
dailydrip_rag/tests/: conftest.py  test_chunk.py  test_index.py  test_ingest.py  test_more_coverage.py  test_query.py  test_service.py  test_service_comprehensive.py
data/: user_store.jsonl
deployment/: Dockerfile.agent  Dockerfile.monolith  docker-compose.yml  nginx.monolith.conf  supervisord.conf
docs/: INTEGRATION_USAGE.md  (+1 more)
(+51 files in other folders)
